hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__struct_same_field_name.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "Inner",
            IdentId(2) => "field",
            IdentId(3) => "number",
            IdentId(4) => "Outer",
            IdentId(5) => "core",
            IdentId(6) => "add",
            IdentId(7) => "boolean",
            IdentId(8) => "div",
            IdentId(9) => "eq",
            IdentId(10) => "ge",
            IdentId(11) => "gt",
            IdentId(12) => "le",
            IdentId(13) => "lt",
            IdentId(14) => "mul",
            IdentId(15) => "neg",
            IdentId(16) => "neq",
            IdentId(17) => "sub",
            IdentId(18) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 2:31; [31, 37],
                    bound: Bound(6),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(3),
                    span: 3:31; [71, 77],
                    bound: Bound(6),
                },
            },
        ],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        bound: Bound(1),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                        StmtId(2),
                        StmtId(3),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(1),
                        span: 2:16; [16, 21],
                        bound: Bound(3),
                    },
                    [],
                    [],
                    Provided(
                        [
                            Field {
                                identifier: Identifier {
                                    id: IdentId(2),
                                    span: 2:24; [24, 29],
                                    bound: Bound(21),
                                },
                                type_def_id: TypeDefId(0),
                                span: 2:24; [24, 37],
                                typed: Typed(4),
                            },
                        ],
                    ),
                    None,
                ),
                span: 2:9; [9, 39],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Struct(
                    Identifier {
                        id: IdentId(4),
                        span: 3:16; [56, 61],
                        bound: Bound(4),
                    },
                    [],
                    [],
                    Provided(
                        [
                            Field {
                                identifier: Identifier {
                                    id: IdentId(2),
                                    span: 3:24; [64, 69],
                                    bound: Bound(22),
                                },
                                type_def_id: TypeDefId(1),
                                span: 3:24; [64, 77],
                                typed: Typed(4),
                            },
                        ],
                    ),
                    None,
                ),
                span: 3:9; [49, 79],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Namespace(
                    Identifier {
                        id: IdentId(5),
                        span: 5:11; [100, 104],
                        bound: Bound(2),
                    },
                    InputId(0),
                    [],
                ),
                span: 5:17; [106, 107],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 2:31; [31, 37],
            },
            TypeDefId(1) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(1),
                    ],
                ),
                span: 3:31; [71, 77],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(3),
                        ],
                        IdentId(4): [
                            SymbolId(4),
                        ],
                        IdentId(5): [
                            SymbolId(2),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(5),
                    {
                        IdentId(3): [
                            SymbolId(6),
                        ],
                        IdentId(6): [
                            SymbolId(20),
                        ],
                        IdentId(7): [
                            SymbolId(7),
                        ],
                        IdentId(8): [
                            SymbolId(19),
                        ],
                        IdentId(9): [
                            SymbolId(17),
                            SymbolId(18),
                        ],
                        IdentId(10): [
                            SymbolId(16),
                        ],
                        IdentId(11): [
                            SymbolId(15),
                        ],
                        IdentId(12): [
                            SymbolId(14),
                        ],
                        IdentId(13): [
                            SymbolId(13),
                        ],
                        IdentId(14): [
                            SymbolId(12),
                        ],
                        IdentId(15): [
                            SymbolId(11),
                        ],
                        IdentId(16): [
                            SymbolId(9),
                            SymbolId(10),
                        ],
                        IdentId(17): [
                            SymbolId(8),
                        ],
                        IdentId(18): [
                            SymbolId(5),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Struct(
                    IdentId(1),
                    StmtId(1),
                ),
                type_id: TypeId(6),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: Struct(
                    IdentId(4),
                    StmtId(2),
                ),
                type_id: TypeId(7),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(18),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(3),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: NativeType(
                    IdentId(7),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(10),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(11),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(10),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: Field(
                    IdentId(2),
                    StmtId(1),
                    0,
                ),
                type_id: TypeId(4),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: Field(
                    IdentId(2),
                    StmtId(2),
                    0,
                ),
                type_id: TypeId(4),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Struct(
                StmtId(1),
            ),
            TypeId(7) => Struct(
                StmtId(2),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(9) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(10) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(11) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {},
            unreachable: [],
        },
    },
)
